--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div id="cal-container">
         <div id="display">
-
+            <div id="prev-operand"></div>
+            <div id="current-operand"></div>
         </div>
     </div>
 </body>
