--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <div id="prev-operand"></div>
             <div id="current-operand"></div>
         </div>
+
+        <div id="control">
+            <button id="clear-btn">CLEAR</button>
+            <button id="delete-btn">DELETE</button>
+        </div>
     </div>
 </body>
 </html>
