--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div id="cal-container">
-        <div id="display">
+    <div id="cal-container" class="deep-border">
+        <div id="display" class="light-border">
             <div id="prev-operand"></div>
             <div id="current-operand"></div>
         </div>
 
         <div id="control">
-            <button id="clear-btn">CLEAR</button>
-            <button id="delete-btn">DELETE</button>
+            <button id="clear-btn" class="light-border">CLEAR</button>
+            <button id="delete-btn" class="light-border">DELETE</button>
         </div>
     </div>
 </body>
