Populate display with values

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 
         <div id="keys">
             <div id="column-a">
-                <button id="7-btn" class="light-border">7</button>
-                <button id="8-btn" class="light-border">8</button>
-                <button id="4-btn" class="light-border">4</button>
-                <button id="5-btn" class="light-border">5</button>
-                <button id="1-btn" class="light-border">1</button>
-                <button id="2-btn" class="light-border">2</button>
-                <button id="point-btn" class="light-border">.</button>
-                <button id="0-btn" class="light-border">0</button>
+                <button id="7-btn" class="light-border number-btn" data-value="7">7</button>
+                <button id="8-btn" class="light-border number-btn" data-value="8">8</button>
+                <button id="4-btn" class="light-border number-btn" data-value="4">4</button>
+                <button id="5-btn" class="light-border number-btn" data-value="5">5</button>
+                <button id="1-btn" class="light-border number-btn" data-value="1">1</button>
+                <button id="2-btn" class="light-border number-btn" data-value="2">2</button>
+                <button id="point-btn" class="light-border number-btn" data-value=".">.</button>
+                <button id="0-btn" class="light-border number-btn" data-value="0">0</button>
             </div>
 
             <div id="column-b">
-                <button id="9-btn" class="light-border">9</button>
+                <button id="9-btn" class="light-border number-btn" data-value="9">9</button>
                 <button id="division-btn" class="light-border">÷</button>
-                <button id="6-btn" class="light-border">6</button>
+                <button id="6-btn" class="light-border number-btn" data-value="6">6</button>
                 <button id="multiplication-btn" class="light-border">×</button>
-                <button id="3-btn" class="light-border">3</button>
+                <button id="3-btn" class="light-border number-btn" data-value="3">3</button>
                 <button id="minus-btn" class="light-border">-</button>
                 <button id="equality-btn" class="light-border">=</button>
                 <button id="addition-btn" class="light-border">+</button>                
