--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <body>
     <div id="cal-container" class="deep-border">
         <div id="display" class="light-border">
-            <div id="prev-operand"></div>
-            <div id="current-operand"></div>
+            <div id="upper-display">
+                <span id="prev-operand"></span>
+                <span id="operator"></span>
+            </div>
+            <div id="lower-display">
+                <span id="current-operand"></span>
+            </div>
         </div>
 
         <div id="control">
