Record operation data attribute in the display

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <button id="multiplication-btn" class="light-border" data-type="operator" data-operation="multiply">×</button>
                 <button id="3-btn" class="light-border" data-type="number">3</button>
                 <button id="minus-btn" class="light-border" data-type="operator" data-operation="subtract">-</button>
-                <button id="equality-btn" class="light-border">=</button>
+                <button id="equality-btn" class="light-border" data-type="equal">=</button>
                 <button id="addition-btn" class="light-border" data-type="operator" data-operation="add">+</button>                
             </div>
         </div>
