--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
 
         <div id="keys">
             <div id="column-a">
-                <button id="7-btn" class="light-border" data-type="number">7</button>
-                <button id="8-btn" class="light-border" data-type="number">8</button>
-                <button id="4-btn" class="light-border" data-type="number">4</button>
-                <button id="5-btn" class="light-border" data-type="number">5</button>
-                <button id="1-btn" class="light-border" data-type="number">1</button>
-                <button id="2-btn" class="light-border" data-type="number">2</button>
-                <button id="point-btn" class="light-border" data-type="number">.</button>
-                <button id="0-btn" class="light-border" data-type="number">0</button>
+                <button class="light-border" data-type="number">7</button>
+                <button class="light-border" data-type="number">8</button>
+                <button class="light-border" data-type="number">4</button>
+                <button class="light-border" data-type="number">5</button>
+                <button class="light-border" data-type="number">1</button>
+                <button class="light-border" data-type="number">2</button>
+                <button class="light-border" data-type="number">.</button>
+                <button class="light-border" data-type="number">0</button>
             </div>
 
             <div id="column-b">
-                <button id="9-btn" class="light-border" data-type="number">9</button>
-                <button id="division-btn" class="light-border" data-type="operator" data-operation="divide">÷</button>
-                <button id="6-btn" class="light-border" data-type="number">6</button>
-                <button id="multiplication-btn" class="light-border" data-type="operator" data-operation="multiply">×</button>
-                <button id="3-btn" class="light-border" data-type="number">3</button>
-                <button id="minus-btn" class="light-border" data-type="operator" data-operation="subtract">-</button>
-                <button id="equality-btn" class="light-border" data-type="equal">=</button>
-                <button id="addition-btn" class="light-border" data-type="operator" data-operation="add">+</button>                
+                <button class="light-border" data-type="number">9</button>
+                <button class="light-border" data-type="operator" data-operation="divide">÷</button>
+                <button class="light-border" data-type="number">6</button>
+                <button class="light-border" data-type="operator" data-operation="multiply">×</button>
+                <button class="light-border" data-type="number">3</button>
+                <button class="light-border" data-type="operator" data-operation="subtract">-</button>
+                <button class="light-border" data-type="equal">=</button>
+                <button class="light-border" data-type="operator" data-operation="add">+</button>                
             </div>
         </div>
     </div>
