--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
 
         <div id="keys">
             <div id="column-a">
-                <button class="light-border" data-type="number">7</button>
-                <button class="light-border" data-type="number">8</button>
-                <button class="light-border" data-type="number">4</button>
-                <button class="light-border" data-type="number">5</button>
-                <button class="light-border" data-type="number">1</button>
-                <button class="light-border" data-type="number">2</button>
-                <button class="light-border" data-type="number">.</button>
-                <button class="light-border" data-type="number">0</button>
+                <button class="key light-border" data-type="number">7</button>
+                <button class="key light-border" data-type="number">8</button>
+                <button class="key light-border" data-type="number">4</button>
+                <button class="key light-border" data-type="number">5</button>
+                <button class="key light-border" data-type="number">1</button>
+                <button class="key light-border" data-type="number">2</button>
+                <button class="key light-border" data-type="number">.</button>
+                <button class="key light-border" data-type="number">0</button>
             </div>
 
             <div id="column-b">
-                <button class="light-border" data-type="number">9</button>
-                <button class="light-border" data-type="operator" data-operation="divide">÷</button>
-                <button class="light-border" data-type="number">6</button>
-                <button class="light-border" data-type="operator" data-operation="multiply">×</button>
-                <button class="light-border" data-type="number">3</button>
-                <button class="light-border" data-type="operator" data-operation="subtract">-</button>
-                <button class="light-border" data-type="equal">=</button>
-                <button class="light-border" data-type="operator" data-operation="add">+</button>                
+                <button class="key light-border" data-type="number">9</button>
+                <button class="key light-border" data-type="operator" data-operation="divide">÷</button>
+                <button class="key light-border" data-type="number">6</button>
+                <button class="key light-border" data-type="operator" data-operation="multiply">×</button>
+                <button class="key light-border" data-type="number">3</button>
+                <button class="key light-border" data-type="operator" data-operation="subtract">-</button>
+                <button class="key light-border" data-type="equal">=</button>
+                <button class="key light-border" data-type="operator" data-operation="add">+</button>                
             </div>
         </div>
     </div>
