Change values to correspond to keyboard keys

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
             <div id="column-b">
                 <button class="key light-border" data-type="number">9</button>
-                <button class="key light-border" data-type="operator" data-operation="divide">÷</button>
+                <button class="key light-border" data-type="operator" data-operation="divide">/</button>
                 <button class="key light-border" data-type="number">6</button>
-                <button class="key light-border" data-type="operator" data-operation="multiply">×</button>
+                <button class="key light-border" data-type="operator" data-operation="multiply">*</button>
                 <button class="key light-border" data-type="number">3</button>
                 <button class="key light-border" data-type="operator" data-operation="subtract">-</button>
                 <button class="key light-border" data-type="equal">=</button>
